crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__cont__cont_new.snap
---
source: crates/service/tests/diagnostics/typeck/cont.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 21,
          "character": 4
        },
        "end": {
          "line": 21,
          "character": 19
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [(ref null $ft1)], found [(ref null $ct1)]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 20,
                "character": 4
              },
              "end": {
                "line": 20,
                "character": 18
              }
            }
          },
          "message": "expected type `(ref null $ft1)`, found `(ref null $ct1)`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 26,
          "character": 4
        },
        "end": {
          "line": 26,
          "character": 19
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [(ref null $ft1)], found [(ref null $ft2)]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 25,
                "character": 4
              },
              "end": {
                "line": 25,
                "character": 18
              }
            }
          },
          "message": "expected type `(ref null $ft1)`, found `(ref null $ft2)`"
        }
      ]
    }
  ]
}
