crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__cont__resume_throw_ref.snap
---
source: crates/service/tests/diagnostics/typeck/cont.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 6,
          "character": 4
        },
        "end": {
          "line": 7,
          "character": 21
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [(ref null exn), (ref null $ct)], found [i64, (ref null $ct)]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 5,
                "character": 4
              },
              "end": {
                "line": 5,
                "character": 17
              }
            }
          },
          "message": "expected type `(ref null exn)`, found `i64`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 10,
          "character": 4
        },
        "end": {
          "line": 11,
          "character": 21
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [(ref null exn), (ref null $ct)], found [(ref null $ct)]"
    }
  ]
}
