crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__cont__switch2.snap
---
source: crates/service/tests/diagnostics/typeck/cont.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 8,
          "character": 4
        },
        "end": {
          "line": 10,
          "character": 20
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, (ref null $ct)], found [i64, (ref null $ct)]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 9,
                "character": 6
              },
              "end": {
                "line": 9,
                "character": 19
              }
            }
          },
          "message": "expected type `i32`, found `i64`"
        }
      ]
    }
  ]
}
